--- a/public/index.html
+++ b/public/index.html
@@ -43,4 +43,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css">
 </html>
